GGG-87 Duplicate tests.